feat: hoàn thiện RBAC company roles + subscription tier pricing (WIP tiếp)
Cập nhật RBAC service/controller, subscription pricing service/controller, quota, renewal task.

Full backend suite: 1597 pass / 0 fail.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>